fix(edit/rte) Remove the gap between RTE and Formats

--- a/sass/components/_edit.scss
+++ b/sass/components/_edit.scss
@@ -34,3 +34,7 @@
 .vertical-tabs__menu-item a {
   padding: map-get($ecl-spacing, 'xs');
 }
+
+.js-form-type-textarea ~ .ecl-form-group {
+  margin-top: 0;
+}
